tested some controllers